GUIシステムの修正 GUIのイメージを追加